syntax = "proto3";

package yandex.cloud.priv.baas.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/baas/v1;baas";

message Archive {
    message ArchiveAttributes {
        string aaib = 1;
        string uri = 2;
    }

    // https://www.acronis.com/en-us/support/documentation/AcronisCyberProtect_15/index.html?TocPath=Backup%257CConversion%2520to%2520a%2520virtual%2520machine%257C_____0#encryption.html
    enum EncryptionAlgorithm {
        ENCRYPTION_ALGORITHM_UNSPECIFIED = 0;
        NONE = 1;
        AES128 = 2;
        AES192 = 3;
        AES256 = 4;
    }

    // https://www.acronis.com/en-us/support/documentation/AcronisCyberProtect_15/index.html?TocPath=Backup%257CConversion%2520to%2520a%2520virtual%2520machine%257C_____0#backup-format.html
    enum Format {
        FORMAT_UNSPECIFIED = 0;
        VERSION_11 = 1;
        VERSION_12 = 2;
        AUTO = 3;
    }

    enum Action {
        ACTION_UNSPECIFIED = 0;
        REFRESH = 1;
        DELETE_BY_AGENT = 2;
    }

    string id = 1;
    string name = 2;
    string vault_id = 3;
    ArchiveAttributes attributes = 4;
    int64 size = 5;
    int64 compressed_data_size = 6;
    int64 data_size = 7;
    int64 original_data_size = 8;
    int64 logical_size = 9;
    Format format = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
    google.protobuf.Timestamp last_backup_created_at = 13;
    google.protobuf.Timestamp last_seen_at = 14;
    bool protected_by_password = 15;
    EncryptionAlgorithm encryption_algorithm = 16;
    string file_name = 17;
    string source_key = 18;
    int64 source_usn = 19;
    repeated Action actions = 20;
    string centralized_plan_id = 21;
    string backup_plan_id = 22;
    string backup_plan_name = 23;
    string description = 24;
    string display_name = 25;
    string compute_instance_id = 26;
    bool consistent = 27;
    bool marked_for_deletion = 28;
    bool deleted_immutable = 29;
    bool deleted = 30;
}

message Volume {
    int64 free_space = 1;
    bool is_bootable = 2;
    bool is_system = 3;
    string name = 4;
    int64 size = 5;
    string mount_strid = 6;
}

message Disk {
    string device_model = 1;
    string name = 2;
    int64 size = 3;
    repeated Volume volumes = 4;
}

message Backup {
    message BackupAttributes {
        string stream_name = 1;
        string uri = 2;
    }

    string id = 1;
    string vault_id = 2;
    string archive_id = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp last_seen_at = 5;
    int64 size = 6;
    int64 deduplicated_size = 7;
    int64 backed_up_data_size = 8;
    int64 original_data_size = 9;
    BackupAttributes attributes = 10;
    string compute_instance_id = 11;
    string source_key = 12;
    int64 source_usn = 13;
    repeated Disk disks = 14;
    string type = 15;
    bool marked_for_deletion = 16;
    bool notarized = 17;
    bool deleted_immutable = 18;
    google.protobuf.BoolValue validation_status = 19;
    bool created_in_network_isolation = 20;
    bool deleted = 21;
}
